{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 215,
  "lineage": "86608feb-875f-3094-7289-c23957826d2a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:455885343965:vpc/vpc-0fe919eba78b89922",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0585946a373a7a88b",
            "default_route_table_id": "rtb-06e4240c202002d54",
            "default_security_group_id": "sg-0b1000021130283c7",
            "dhcp_options_id": "dopt-051881888aa389e27",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0fe919eba78b89922",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06e4240c202002d54",
            "owner_id": "455885343965"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:455885343965:loadbalancer/app/ecs-lb/34580ee0c4e48d69",
            "arn_suffix": "app/ecs-lb/34580ee0c4e48d69",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ecs-lb-1345599501.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:455885343965:loadbalancer/app/ecs-lb/34580ee0c4e48d69",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecs-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-08b38a48a3e93c657"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00b95a574eec7fcdc"
              },
              {
                "subnet_id": "subnet-04d52db01e38824f3"
              },
              {
                "subnet_id": "subnet-05cd8dd29c55fa092"
              }
            ],
            "subnets": [
              "subnet-00b95a574eec7fcdc",
              "subnet-04d52db01e38824f3",
              "subnet-05cd8dd29c55fa092"
            ],
            "vpc_id": "vpc-0fe919eba78b89922",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.lb_sg",
            "data.aws_subnets.subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:455885343965:listener/app/ecs-lb/34580ee0c4e48d69/02246562a813ebab",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:455885343965:targetgroup/nginx-ecs/63cf696316d51866",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:455885343965:listener/app/ecs-lb/34580ee0c4e48d69/02246562a813ebab",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:455885343965:loadbalancer/app/ecs-lb/34580ee0c4e48d69",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "aws_lb.lb",
            "aws_lb_target_group.target",
            "aws_security_group.lb_sg",
            "data.aws_subnets.subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:455885343965:targetgroup/nginx-ecs/63cf696316d51866",
            "arn_suffix": "targetgroup/nginx-ecs/63cf696316d51866",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:455885343965:targetgroup/nginx-ecs/63cf696316d51866",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nginx-ecs",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0fe919eba78b89922"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_secgrp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:455885343965:security-group/sg-08b38a48a3e93c657",
            "description": "Load balancer security firewall",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08b38a48a3e93c657",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs-lb-sg",
            "name_prefix": "",
            "owner_id": "455885343965",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fe919eba78b89922"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "secgrp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:455885343965:security-group/sg-01d94b18ac32d28da",
            "description": "ecs-service ecs security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01d94b18ac32d28da",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08b38a48a3e93c657"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs-service-ecs-secgrp",
            "name_prefix": "",
            "owner_id": "455885343965",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs-service-ecs-secgrp"
            },
            "tags_all": {
              "Name": "ecs-service-ecs-secgrp"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe919eba78b89922"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.lb_sg"
          ]
        }
      ]
    }
  ]
}